fix: mobile ui overflow

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  width: 100vw;
+  height: 100vh;
   overflow: hidden;
 }
 
